ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Protected/Protected6/input.ts.stderr
error[1029]: 'protected' modifier must precede 'static' modifier
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Protected/Protected6/input.ts:2:10
  |
2 |   static protected m() { }
  |          ^^^^^^^^^

